# salary

./: Dockerfile.yml  docker-compose.yml  pyproject.toml
salary/: db.sqlite3
salary/salary/: settings.py  urls.py
salary/salaryapp/: models.py  serializers.py  views.py
salary/salaryapp/migrations/: 0001_initial.py
